@@ -312,7 +312,7 @@ label{
 .menu-module{
 	position: relative;
 }
-.menu-module:hover .menu-top:after{
+.no-touch .menu-module:hover .menu-top:after{
 	content: "\276F";
 	padding-top: 6px;
 	position: absolute;
@@ -321,7 +321,7 @@ label{
 #selectedModuleLink:after{
 	content: "";
 }
-.menu-module:hover .wp-submenu{
+.no-touch .menu-module:hover .wp-submenu{
 	-webkit-transition-delay: .15s;
 	transition-delay: .15s;
 	z-index: 20;
